--- a/Mid-term project/Cleaning/clean_data.ipynb
+++ b/Mid-term project/Cleaning/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "id": "4d730624-eae1-4e37-aa3c-563517f9d379",
    "metadata": {
     "tags": []
@@ -12,8 +12,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: xlrd in c:\\users\\vonke\\anaconda3\\lib\\site-packages (2.0.1)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n"
+      "Requirement already satisfied: xlrd in c:\\users\\vonke\\anaconda3\\lib\\site-packages (2.0.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 63,
    "id": "f41cfaf1-f01e-4526-b09e-ad235a1f5ba7",
    "metadata": {
     "tags": []
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 64,
    "id": "edb7d590-6425-4aa0-8298-6bc0d0a246b0",
    "metadata": {
     "tags": []
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "id": "ad4671c0-15ed-4dd0-9444-0a6af7032fbf",
    "metadata": {
     "tags": []
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "id": "54186353-9925-4f5e-bbe9-a352c8b116c2",
    "metadata": {
     "tags": []
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 67,
    "id": "0d7f8224-7b68-445a-a5b8-be7ca109e6b3",
    "metadata": {
     "tags": []
@@ -101,7 +101,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "id": "9cb05363-0744-4632-b4e0-5ab4313c44f4",
    "metadata": {
     "tags": []
@@ -343,7 +343,7 @@
        "[26760 rows x 10 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "id": "fc3af6c8-4eaa-4d3d-83eb-96d38451a37c",
    "metadata": {
     "tags": []
@@ -598,7 +598,7 @@
        "9                  4.79  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 70,
    "id": "53556663-9c30-4411-8a96-bc8a339d7723",
    "metadata": {},
    "outputs": [],
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 71,
    "id": "087cfe8f-f89f-4a79-8aa8-1d36d096f517",
    "metadata": {
     "tags": []
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 72,
    "id": "e362bee9-3e96-42aa-a7c1-ddd7f18a35d6",
    "metadata": {
     "tags": []
@@ -897,7 +897,7 @@
        "[25729 rows x 10 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 73,
    "id": "0f200dab-fd30-44e7-99a9-779ffdf0fc6e",
    "metadata": {
     "tags": []
@@ -918,36 +918,42 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vonke\\AppData\\Local\\Temp\\ipykernel_14620\\3911414914.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\vonke\\AppData\\Local\\Temp\\ipykernel_14620\\190350536.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  airbnb_df['beds'] = np.where(pd.isnull(airbnb_df['beds']), np.floor(airbnb_df['accommodates'] / 2), airbnb_df['beds']).astype(int)\n",
-      "C:\\Users\\vonke\\AppData\\Local\\Temp\\ipykernel_14620\\3911414914.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\vonke\\AppData\\Local\\Temp\\ipykernel_14620\\190350536.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  airbnb_df['host_is_superhost'] = airbnb_df['host_is_superhost'].fillna('f')\n",
-      "C:\\Users\\vonke\\AppData\\Local\\Temp\\ipykernel_14620\\3911414914.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\vonke\\AppData\\Local\\Temp\\ipykernel_14620\\190350536.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  airbnb_df['review_scores_rating'] = airbnb_df['review_scores_rating'].fillna(0)\n",
-      "C:\\Users\\vonke\\AppData\\Local\\Temp\\ipykernel_14620\\3911414914.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\vonke\\AppData\\Local\\Temp\\ipykernel_14620\\190350536.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  airbnb_df['bathrooms_text'] = airbnb_df['bathrooms_text'].str.extract('(\\d+\\.?\\d*)').astype(float)\n",
-      "C:\\Users\\vonke\\AppData\\Local\\Temp\\ipykernel_14620\\3911414914.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\vonke\\AppData\\Local\\Temp\\ipykernel_14620\\190350536.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  airbnb_df['bathrooms_text'] = airbnb_df['bathrooms_text'].fillna(1)\n"
+      "  airbnb_df['bathrooms_text'] = airbnb_df['bathrooms_text'].fillna(1)\n",
+      "C:\\Users\\vonke\\AppData\\Local\\Temp\\ipykernel_14620\\190350536.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  airbnb_df['price'] = airbnb_df['price'].str.replace('$', '').str.replace(',', '').astype(float)\n"
      ]
     }
    ],
@@ -957,12 +963,13 @@
     "airbnb_df = airbnb_df.dropna(subset=['bathrooms_text'])\n",
     "airbnb_df['review_scores_rating'] = airbnb_df['review_scores_rating'].fillna(0)\n",
     "airbnb_df['bathrooms_text'] = airbnb_df['bathrooms_text'].str.extract('(\\d+\\.?\\d*)').astype(float)\n",
-    "airbnb_df['bathrooms_text'] = airbnb_df['bathrooms_text'].fillna(1)"
+    "airbnb_df['bathrooms_text'] = airbnb_df['bathrooms_text'].fillna(1)\n",
+    "airbnb_df['price'] = airbnb_df['price'].str.replace('$', '').str.replace(',', '').astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "id": "3512dfcd-c5bd-411e-ba57-27c0e39b905d",
    "metadata": {
     "tags": []
@@ -1008,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 75,
    "id": "5a936fd6-d2d4-4892-8e41-fdddfc7d107b",
    "metadata": {
     "tags": []
@@ -1031,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 76,
    "id": "338412e8-bfaf-4692-bd16-d28e20179909",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 83,
    "id": "6f07348a-f27b-4afb-9432-aaa4641d58b8",
    "metadata": {
     "tags": []
@@ -1116,7 +1123,7 @@
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>$3,390.00</td>\n",
+       "      <td>3390.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
@@ -1129,7 +1136,7 @@
        "      <td>14</td>\n",
        "      <td>5.5</td>\n",
        "      <td>8</td>\n",
-       "      <td>$18,000.00</td>\n",
+       "      <td>18000.0</td>\n",
        "      <td>64</td>\n",
        "      <td>4.58</td>\n",
        "    </tr>\n",
@@ -1142,7 +1149,7 @@
        "      <td>2</td>\n",
        "      <td>1.5</td>\n",
        "      <td>1</td>\n",
-       "      <td>$3,350.00</td>\n",
+       "      <td>3350.0</td>\n",
        "      <td>221</td>\n",
        "      <td>4.90</td>\n",
        "    </tr>\n",
@@ -1155,7 +1162,7 @@
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>$339.00</td>\n",
+       "      <td>339.0</td>\n",
        "      <td>6</td>\n",
        "      <td>4.83</td>\n",
        "    </tr>\n",
@@ -1168,7 +1175,7 @@
        "      <td>2</td>\n",
        "      <td>1.5</td>\n",
        "      <td>2</td>\n",
-       "      <td>$1,273.00</td>\n",
+       "      <td>1273.0</td>\n",
        "      <td>22</td>\n",
        "      <td>4.67</td>\n",
        "    </tr>\n",
@@ -1194,7 +1201,7 @@
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>$970.00</td>\n",
+       "      <td>970.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
@@ -1207,7 +1214,7 @@
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>$175.00</td>\n",
+       "      <td>175.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
@@ -1220,7 +1227,7 @@
        "      <td>5</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3</td>\n",
-       "      <td>$1,166.00</td>\n",
+       "      <td>1166.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
@@ -1233,7 +1240,7 @@
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>$286.00</td>\n",
+       "      <td>286.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
@@ -1246,7 +1253,7 @@
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>$800.00</td>\n",
+       "      <td>800.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
@@ -1269,18 +1276,18 @@
        "26758  1052898145299209233         f             Cuauhtémoc     Private room   \n",
        "26759  1052927676643283947         f          Benito Juárez  Entire home/apt   \n",
        "\n",
-       "       accommodates  bathrooms  beds       price  number_of_reviews  \\\n",
-       "0                 2        1.0     1   $3,390.00                  0   \n",
-       "1                14        5.5     8  $18,000.00                 64   \n",
-       "2                 2        1.5     1   $3,350.00                221   \n",
-       "3                 2        1.0     1     $339.00                  6   \n",
-       "4                 2        1.5     2   $1,273.00                 22   \n",
-       "...             ...        ...   ...         ...                ...   \n",
-       "26755             2        1.0     1     $970.00                  0   \n",
-       "26756             2        1.0     1     $175.00                  0   \n",
-       "26757             5        2.0     3   $1,166.00                  0   \n",
-       "26758             2        1.0     1     $286.00                  0   \n",
-       "26759             2        1.0     1     $800.00                  0   \n",
+       "       accommodates  bathrooms  beds    price  number_of_reviews  \\\n",
+       "0                 2        1.0     1   3390.0                  0   \n",
+       "1                14        5.5     8  18000.0                 64   \n",
+       "2                 2        1.5     1   3350.0                221   \n",
+       "3                 2        1.0     1    339.0                  6   \n",
+       "4                 2        1.5     2   1273.0                 22   \n",
+       "...             ...        ...   ...      ...                ...   \n",
+       "26755             2        1.0     1    970.0                  0   \n",
+       "26756             2        1.0     1    175.0                  0   \n",
+       "26757             5        2.0     3   1166.0                  0   \n",
+       "26758             2        1.0     1    286.0                  0   \n",
+       "26759             2        1.0     1    800.0                  0   \n",
        "\n",
        "       review_scores_rating  \n",
        "0                      0.00  \n",
@@ -1298,7 +1305,7 @@
        "[25710 rows x 10 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 78,
    "id": "3ffcdeb9-18ee-4c8d-9429-d47f0d881676",
    "metadata": {},
    "outputs": [],
