--- a/Mid-term project/Mid-term Project.ipynb
+++ b/Mid-term project/Mid-term Project.ipynb
@@ -3545,7 +3545,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3559,7 +3559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
