--- a/Mid-term project/Cleaning/clean_data.ipynb
+++ b/Mid-term project/Cleaning/clean_data.ipynb
@@ -957,15 +957,7 @@
      ]
     }
    ],
-   "source": [
-    "airbnb_df['beds'] = np.where(pd.isnull(airbnb_df['beds']), np.floor(airbnb_df['accommodates'] / 2), airbnb_df['beds']).astype(int)\n",
-    "airbnb_df['host_is_superhost'] = airbnb_df['host_is_superhost'].fillna('f')\n",
-    "airbnb_df = airbnb_df.dropna(subset=['bathrooms_text'])\n",
-    "airbnb_df['review_scores_rating'] = airbnb_df['review_scores_rating'].fillna(0)\n",
-    "airbnb_df['bathrooms_text'] = airbnb_df['bathrooms_text'].str.extract('(\\d+\\.?\\d*)').astype(float)\n",
-    "airbnb_df['bathrooms_text'] = airbnb_df['bathrooms_text'].fillna(1)\n",
-    "airbnb_df['price'] = airbnb_df['price'].str.replace('$', '').str.replace(',', '').astype(float)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1327,7 +1319,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1341,7 +1333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
