--- a/Mid-term project/Main-Mid-term Project-RevenueAirbnb-Mex-V2.ipynb
+++ b/Mid-term project/Main-Mid-term Project-RevenueAirbnb-Mex-V2.ipynb
@@ -3316,7 +3316,7 @@
     }
    ],
    "source": [
-    "rmse= mse( y_test, y_pred, squared = False)\n",
+    "rmse= mse(y_test, y_pred, squared = False)\n",
     "rmse"
    ]
   },
@@ -3379,7 +3379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 129,
    "id": "857bb24b",
    "metadata": {},
    "outputs": [
@@ -3389,385 +3389,37 @@
        "0.93"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "round(r2_score(y_train, y_pred_train),2)"
+    "r2= round(r2_score(y_train, y_pred_train),2)\n",
+    "r2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 130,
    "id": "b321a13f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>20</th>\n",
-       "      <th>21</th>\n",
-       "      <th>22</th>\n",
-       "      <th>23</th>\n",
-       "      <th>24</th>\n",
-       "      <th>25</th>\n",
-       "      <th>26</th>\n",
-       "      <th>27</th>\n",
-       "      <th>28</th>\n",
-       "      <th>29</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-1.242227</td>\n",
-       "      <td>1.242227</td>\n",
-       "      <td>-0.106438</td>\n",
-       "      <td>-0.378838</td>\n",
-       "      <td>-0.267655</td>\n",
-       "      <td>-0.136757</td>\n",
-       "      <td>1.112623</td>\n",
-       "      <td>-0.135373</td>\n",
-       "      <td>-0.115997</td>\n",
-       "      <td>-0.106189</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.706832</td>\n",
-       "      <td>-0.111792</td>\n",
-       "      <td>-0.559477</td>\n",
-       "      <td>-0.645729</td>\n",
-       "      <td>-0.861425</td>\n",
-       "      <td>-0.433770</td>\n",
-       "      <td>-1.369590</td>\n",
-       "      <td>0.927587</td>\n",
-       "      <td>0.523551</td>\n",
-       "      <td>1.168686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-1.242227</td>\n",
-       "      <td>1.242227</td>\n",
-       "      <td>-0.106438</td>\n",
-       "      <td>2.639653</td>\n",
-       "      <td>-0.267655</td>\n",
-       "      <td>-0.136757</td>\n",
-       "      <td>-0.898777</td>\n",
-       "      <td>-0.135373</td>\n",
-       "      <td>-0.115997</td>\n",
-       "      <td>-0.106189</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.414764</td>\n",
-       "      <td>-0.111792</td>\n",
-       "      <td>-1.799003</td>\n",
-       "      <td>-0.645729</td>\n",
-       "      <td>-0.861425</td>\n",
-       "      <td>-0.891688</td>\n",
-       "      <td>0.950615</td>\n",
-       "      <td>0.397375</td>\n",
-       "      <td>0.456590</td>\n",
-       "      <td>-1.453849</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-1.242227</td>\n",
-       "      <td>1.242227</td>\n",
-       "      <td>-0.106438</td>\n",
-       "      <td>-0.378838</td>\n",
-       "      <td>-0.267655</td>\n",
-       "      <td>-0.136757</td>\n",
-       "      <td>1.112623</td>\n",
-       "      <td>-0.135373</td>\n",
-       "      <td>-0.115997</td>\n",
-       "      <td>-0.106189</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.706832</td>\n",
-       "      <td>-0.111792</td>\n",
-       "      <td>0.664494</td>\n",
-       "      <td>0.434649</td>\n",
-       "      <td>0.488626</td>\n",
-       "      <td>0.477061</td>\n",
-       "      <td>-1.026624</td>\n",
-       "      <td>0.373158</td>\n",
-       "      <td>0.731400</td>\n",
-       "      <td>1.068835</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-1.242227</td>\n",
-       "      <td>1.242227</td>\n",
-       "      <td>-0.106438</td>\n",
-       "      <td>-0.378838</td>\n",
-       "      <td>-0.267655</td>\n",
-       "      <td>-0.136757</td>\n",
-       "      <td>-0.898777</td>\n",
-       "      <td>-0.135373</td>\n",
-       "      <td>-0.115997</td>\n",
-       "      <td>-0.106189</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.706832</td>\n",
-       "      <td>-0.111792</td>\n",
-       "      <td>0.664494</td>\n",
-       "      <td>1.079642</td>\n",
-       "      <td>0.488626</td>\n",
-       "      <td>0.158604</td>\n",
-       "      <td>-0.827788</td>\n",
-       "      <td>-0.498116</td>\n",
-       "      <td>0.390771</td>\n",
-       "      <td>0.995795</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.805006</td>\n",
-       "      <td>-0.805006</td>\n",
-       "      <td>-0.106438</td>\n",
-       "      <td>-0.378838</td>\n",
-       "      <td>-0.267655</td>\n",
-       "      <td>-0.136757</td>\n",
-       "      <td>1.112623</td>\n",
-       "      <td>-0.135373</td>\n",
-       "      <td>-0.115997</td>\n",
-       "      <td>-0.106189</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.706832</td>\n",
-       "      <td>-0.111792</td>\n",
-       "      <td>-0.559477</td>\n",
-       "      <td>0.434649</td>\n",
-       "      <td>-0.861425</td>\n",
-       "      <td>0.636187</td>\n",
-       "      <td>-0.879992</td>\n",
-       "      <td>1.031483</td>\n",
-       "      <td>0.423539</td>\n",
-       "      <td>1.016103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19277</th>\n",
-       "      <td>0.805006</td>\n",
-       "      <td>-0.805006</td>\n",
-       "      <td>-0.106438</td>\n",
-       "      <td>-0.378838</td>\n",
-       "      <td>-0.267655</td>\n",
-       "      <td>-0.136757</td>\n",
-       "      <td>-0.898777</td>\n",
-       "      <td>-0.135373</td>\n",
-       "      <td>-0.115997</td>\n",
-       "      <td>-0.106189</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.414764</td>\n",
-       "      <td>-0.111792</td>\n",
-       "      <td>-1.799003</td>\n",
-       "      <td>-0.645729</td>\n",
-       "      <td>-0.861425</td>\n",
-       "      <td>-0.457890</td>\n",
-       "      <td>0.814747</td>\n",
-       "      <td>-0.077343</td>\n",
-       "      <td>0.423539</td>\n",
-       "      <td>-0.621529</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19278</th>\n",
-       "      <td>-1.242227</td>\n",
-       "      <td>1.242227</td>\n",
-       "      <td>-0.106438</td>\n",
-       "      <td>-0.378838</td>\n",
-       "      <td>3.736159</td>\n",
-       "      <td>-0.136757</td>\n",
-       "      <td>-0.898777</td>\n",
-       "      <td>-0.135373</td>\n",
-       "      <td>-0.115997</td>\n",
-       "      <td>-0.106189</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.706832</td>\n",
-       "      <td>-0.111792</td>\n",
-       "      <td>1.530666</td>\n",
-       "      <td>2.003812</td>\n",
-       "      <td>1.521681</td>\n",
-       "      <td>1.044722</td>\n",
-       "      <td>0.565149</td>\n",
-       "      <td>0.885162</td>\n",
-       "      <td>0.608875</td>\n",
-       "      <td>-0.074271</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19279</th>\n",
-       "      <td>0.805006</td>\n",
-       "      <td>-0.805006</td>\n",
-       "      <td>-0.106438</td>\n",
-       "      <td>-0.378838</td>\n",
-       "      <td>-0.267655</td>\n",
-       "      <td>-0.136757</td>\n",
-       "      <td>1.112623</td>\n",
-       "      <td>-0.135373</td>\n",
-       "      <td>-0.115997</td>\n",
-       "      <td>-0.106189</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.414764</td>\n",
-       "      <td>-0.111792</td>\n",
-       "      <td>-0.559477</td>\n",
-       "      <td>-0.645729</td>\n",
-       "      <td>-0.861425</td>\n",
-       "      <td>-0.516253</td>\n",
-       "      <td>0.898767</td>\n",
-       "      <td>0.373158</td>\n",
-       "      <td>0.731400</td>\n",
-       "      <td>-0.979810</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19280</th>\n",
-       "      <td>-1.242227</td>\n",
-       "      <td>1.242227</td>\n",
-       "      <td>-0.106438</td>\n",
-       "      <td>-0.378838</td>\n",
-       "      <td>-0.267655</td>\n",
-       "      <td>-0.136757</td>\n",
-       "      <td>-0.898777</td>\n",
-       "      <td>-0.135373</td>\n",
-       "      <td>-0.115997</td>\n",
-       "      <td>-0.106189</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.706832</td>\n",
-       "      <td>-0.111792</td>\n",
-       "      <td>0.664494</td>\n",
-       "      <td>-0.645729</td>\n",
-       "      <td>0.488626</td>\n",
-       "      <td>0.812256</td>\n",
-       "      <td>-1.166278</td>\n",
-       "      <td>0.135805</td>\n",
-       "      <td>0.215559</td>\n",
-       "      <td>1.113391</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19281</th>\n",
-       "      <td>0.805006</td>\n",
-       "      <td>-0.805006</td>\n",
-       "      <td>-0.106438</td>\n",
-       "      <td>-0.378838</td>\n",
-       "      <td>-0.267655</td>\n",
-       "      <td>-0.136757</td>\n",
-       "      <td>-0.898777</td>\n",
-       "      <td>-0.135373</td>\n",
-       "      <td>-0.115997</td>\n",
-       "      <td>-0.106189</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.706832</td>\n",
-       "      <td>-0.111792</td>\n",
-       "      <td>0.664494</td>\n",
-       "      <td>1.500135</td>\n",
-       "      <td>0.488626</td>\n",
-       "      <td>0.965815</td>\n",
-       "      <td>0.919566</td>\n",
-       "      <td>-0.914400</td>\n",
-       "      <td>-0.067666</td>\n",
-       "      <td>-1.118195</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>19282 rows × 30 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             0         1         2         3         4         5         6   \\\n",
-       "0     -1.242227  1.242227 -0.106438 -0.378838 -0.267655 -0.136757  1.112623   \n",
-       "1     -1.242227  1.242227 -0.106438  2.639653 -0.267655 -0.136757 -0.898777   \n",
-       "2     -1.242227  1.242227 -0.106438 -0.378838 -0.267655 -0.136757  1.112623   \n",
-       "3     -1.242227  1.242227 -0.106438 -0.378838 -0.267655 -0.136757 -0.898777   \n",
-       "4      0.805006 -0.805006 -0.106438 -0.378838 -0.267655 -0.136757  1.112623   \n",
-       "...         ...       ...       ...       ...       ...       ...       ...   \n",
-       "19277  0.805006 -0.805006 -0.106438 -0.378838 -0.267655 -0.136757 -0.898777   \n",
-       "19278 -1.242227  1.242227 -0.106438 -0.378838  3.736159 -0.136757 -0.898777   \n",
-       "19279  0.805006 -0.805006 -0.106438 -0.378838 -0.267655 -0.136757  1.112623   \n",
-       "19280 -1.242227  1.242227 -0.106438 -0.378838 -0.267655 -0.136757 -0.898777   \n",
-       "19281  0.805006 -0.805006 -0.106438 -0.378838 -0.267655 -0.136757 -0.898777   \n",
-       "\n",
-       "             7         8         9   ...        20        21        22  \\\n",
-       "0     -0.135373 -0.115997 -0.106189  ... -0.706832 -0.111792 -0.559477   \n",
-       "1     -0.135373 -0.115997 -0.106189  ...  1.414764 -0.111792 -1.799003   \n",
-       "2     -0.135373 -0.115997 -0.106189  ... -0.706832 -0.111792  0.664494   \n",
-       "3     -0.135373 -0.115997 -0.106189  ... -0.706832 -0.111792  0.664494   \n",
-       "4     -0.135373 -0.115997 -0.106189  ... -0.706832 -0.111792 -0.559477   \n",
-       "...         ...       ...       ...  ...       ...       ...       ...   \n",
-       "19277 -0.135373 -0.115997 -0.106189  ...  1.414764 -0.111792 -1.799003   \n",
-       "19278 -0.135373 -0.115997 -0.106189  ... -0.706832 -0.111792  1.530666   \n",
-       "19279 -0.135373 -0.115997 -0.106189  ...  1.414764 -0.111792 -0.559477   \n",
-       "19280 -0.135373 -0.115997 -0.106189  ... -0.706832 -0.111792  0.664494   \n",
-       "19281 -0.135373 -0.115997 -0.106189  ... -0.706832 -0.111792  0.664494   \n",
-       "\n",
-       "             23        24        25        26        27        28        29  \n",
-       "0     -0.645729 -0.861425 -0.433770 -1.369590  0.927587  0.523551  1.168686  \n",
-       "1     -0.645729 -0.861425 -0.891688  0.950615  0.397375  0.456590 -1.453849  \n",
-       "2      0.434649  0.488626  0.477061 -1.026624  0.373158  0.731400  1.068835  \n",
-       "3      1.079642  0.488626  0.158604 -0.827788 -0.498116  0.390771  0.995795  \n",
-       "4      0.434649 -0.861425  0.636187 -0.879992  1.031483  0.423539  1.016103  \n",
-       "...         ...       ...       ...       ...       ...       ...       ...  \n",
-       "19277 -0.645729 -0.861425 -0.457890  0.814747 -0.077343  0.423539 -0.621529  \n",
-       "19278  2.003812  1.521681  1.044722  0.565149  0.885162  0.608875 -0.074271  \n",
-       "19279 -0.645729 -0.861425 -0.516253  0.898767  0.373158  0.731400 -0.979810  \n",
-       "19280 -0.645729  0.488626  0.812256 -1.166278  0.135805  0.215559  1.113391  \n",
-       "19281  1.500135  0.488626  0.965815  0.919566 -0.914400 -0.067666 -1.118195  \n",
-       "\n",
-       "[19282 rows x 30 columns]"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusted R2: 0.9298909147576749 \n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "X_train"
+    "# Calculating adjusted R^2\n",
+    "n = X_train.shape[0]  # Number of observations in the training set\n",
+    "p = X_train.shape[1]  # Number of features used for training\n",
+    "adjusted_r2 = 1 - (1 - r2) * (n - 1) / (n - p - 1)\n",
+    "print(f'Adjusted R2: {adjusted_r2} \\n')"
    ]
   },
   {
@@ -4125,7 +3777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d0c2a38",
+   "id": "793cb037",
    "metadata": {},
    "outputs": [],
    "source": []
