--- a/Mid-term project/Mid-term Project-Revenue-Airbnb_Berlin-V2.ipynb
+++ b/Mid-term project/Mid-term Project-Revenue-Airbnb_Berlin-V2.ipynb
@@ -3247,6 +3247,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a955bb4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "e8c70a21",
    "metadata": {},
@@ -3305,395 +3313,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "id": "857bb24b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9"
+       "0.89696"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "round(r2_score(y_train, y_pred_train),2)"
+    "r2= round(r2_score(y_train, y_pred_train),5)\n",
+    "r2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "id": "b321a13f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>19</th>\n",
-       "      <th>20</th>\n",
-       "      <th>21</th>\n",
-       "      <th>22</th>\n",
-       "      <th>23</th>\n",
-       "      <th>24</th>\n",
-       "      <th>25</th>\n",
-       "      <th>26</th>\n",
-       "      <th>27</th>\n",
-       "      <th>28</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.244785</td>\n",
-       "      <td>-0.429202</td>\n",
-       "      <td>-0.033757</td>\n",
-       "      <td>-0.478078</td>\n",
-       "      <td>-0.065716</td>\n",
-       "      <td>-0.140001</td>\n",
-       "      <td>-0.045029</td>\n",
-       "      <td>-0.422779</td>\n",
-       "      <td>1.866807</td>\n",
-       "      <td>-0.155637</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.965560</td>\n",
-       "      <td>-0.113177</td>\n",
-       "      <td>-0.312471</td>\n",
-       "      <td>-0.234035</td>\n",
-       "      <td>-0.168534</td>\n",
-       "      <td>-0.746006</td>\n",
-       "      <td>-0.327171</td>\n",
-       "      <td>1.192321</td>\n",
-       "      <td>0.854267</td>\n",
-       "      <td>-1.511910</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.244785</td>\n",
-       "      <td>-0.429202</td>\n",
-       "      <td>-0.033757</td>\n",
-       "      <td>-0.478078</td>\n",
-       "      <td>-0.065716</td>\n",
-       "      <td>-0.140001</td>\n",
-       "      <td>-0.045029</td>\n",
-       "      <td>-0.422779</td>\n",
-       "      <td>-0.535674</td>\n",
-       "      <td>-0.155637</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.965560</td>\n",
-       "      <td>-0.113177</td>\n",
-       "      <td>-0.312471</td>\n",
-       "      <td>-0.234035</td>\n",
-       "      <td>-0.168534</td>\n",
-       "      <td>-0.746006</td>\n",
-       "      <td>-0.421933</td>\n",
-       "      <td>-1.142160</td>\n",
-       "      <td>-0.140882</td>\n",
-       "      <td>0.816530</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.244785</td>\n",
-       "      <td>-0.429202</td>\n",
-       "      <td>-0.033757</td>\n",
-       "      <td>-0.478078</td>\n",
-       "      <td>-0.065716</td>\n",
-       "      <td>-0.140001</td>\n",
-       "      <td>-0.045029</td>\n",
-       "      <td>-0.422779</td>\n",
-       "      <td>-0.535674</td>\n",
-       "      <td>-0.155637</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.035668</td>\n",
-       "      <td>-0.113177</td>\n",
-       "      <td>-1.905825</td>\n",
-       "      <td>-0.234035</td>\n",
-       "      <td>-0.168534</td>\n",
-       "      <td>-0.746006</td>\n",
-       "      <td>-1.576690</td>\n",
-       "      <td>-1.142160</td>\n",
-       "      <td>-0.744220</td>\n",
-       "      <td>0.816530</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-0.244785</td>\n",
-       "      <td>-0.429202</td>\n",
-       "      <td>-0.033757</td>\n",
-       "      <td>2.091711</td>\n",
-       "      <td>-0.065716</td>\n",
-       "      <td>-0.140001</td>\n",
-       "      <td>-0.045029</td>\n",
-       "      <td>-0.422779</td>\n",
-       "      <td>-0.535674</td>\n",
-       "      <td>-0.155637</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.965560</td>\n",
-       "      <td>-0.113177</td>\n",
-       "      <td>1.144431</td>\n",
-       "      <td>-0.234035</td>\n",
-       "      <td>1.380132</td>\n",
-       "      <td>1.140292</td>\n",
-       "      <td>1.658588</td>\n",
-       "      <td>0.561407</td>\n",
-       "      <td>-0.140882</td>\n",
-       "      <td>0.226027</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.244785</td>\n",
-       "      <td>-0.429202</td>\n",
-       "      <td>-0.033757</td>\n",
-       "      <td>-0.478078</td>\n",
-       "      <td>-0.065716</td>\n",
-       "      <td>-0.140001</td>\n",
-       "      <td>-0.045029</td>\n",
-       "      <td>-0.422779</td>\n",
-       "      <td>-0.535674</td>\n",
-       "      <td>-0.155637</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.965560</td>\n",
-       "      <td>-0.113177</td>\n",
-       "      <td>1.549940</td>\n",
-       "      <td>-0.234035</td>\n",
-       "      <td>2.477641</td>\n",
-       "      <td>1.567642</td>\n",
-       "      <td>0.680942</td>\n",
-       "      <td>-0.717355</td>\n",
-       "      <td>0.472353</td>\n",
-       "      <td>0.798592</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7902</th>\n",
-       "      <td>-0.244785</td>\n",
-       "      <td>2.329905</td>\n",
-       "      <td>-0.033757</td>\n",
-       "      <td>-0.478078</td>\n",
-       "      <td>-0.065716</td>\n",
-       "      <td>-0.140001</td>\n",
-       "      <td>-0.045029</td>\n",
-       "      <td>-0.422779</td>\n",
-       "      <td>-0.535674</td>\n",
-       "      <td>-0.155637</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.965560</td>\n",
-       "      <td>-0.113177</td>\n",
-       "      <td>-0.312471</td>\n",
-       "      <td>1.588374</td>\n",
-       "      <td>-0.168534</td>\n",
-       "      <td>-0.746006</td>\n",
-       "      <td>0.680942</td>\n",
-       "      <td>-1.142160</td>\n",
-       "      <td>0.177379</td>\n",
-       "      <td>0.816530</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7903</th>\n",
-       "      <td>-0.244785</td>\n",
-       "      <td>-0.429202</td>\n",
-       "      <td>-0.033757</td>\n",
-       "      <td>2.091711</td>\n",
-       "      <td>-0.065716</td>\n",
-       "      <td>-0.140001</td>\n",
-       "      <td>-0.045029</td>\n",
-       "      <td>-0.422779</td>\n",
-       "      <td>-0.535674</td>\n",
-       "      <td>-0.155637</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.035668</td>\n",
-       "      <td>-0.113177</td>\n",
-       "      <td>-1.905825</td>\n",
-       "      <td>-0.234035</td>\n",
-       "      <td>-0.168534</td>\n",
-       "      <td>-0.746006</td>\n",
-       "      <td>-1.782733</td>\n",
-       "      <td>-1.142160</td>\n",
-       "      <td>-1.431245</td>\n",
-       "      <td>0.816530</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7904</th>\n",
-       "      <td>-0.244785</td>\n",
-       "      <td>-0.429202</td>\n",
-       "      <td>-0.033757</td>\n",
-       "      <td>-0.478078</td>\n",
-       "      <td>-0.065716</td>\n",
-       "      <td>-0.140001</td>\n",
-       "      <td>-0.045029</td>\n",
-       "      <td>-0.422779</td>\n",
-       "      <td>1.866807</td>\n",
-       "      <td>-0.155637</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.035668</td>\n",
-       "      <td>-0.113177</td>\n",
-       "      <td>-0.312471</td>\n",
-       "      <td>-0.234035</td>\n",
-       "      <td>-0.168534</td>\n",
-       "      <td>-0.746006</td>\n",
-       "      <td>-0.805927</td>\n",
-       "      <td>-1.142160</td>\n",
-       "      <td>0.292171</td>\n",
-       "      <td>0.816530</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7905</th>\n",
-       "      <td>-0.244785</td>\n",
-       "      <td>-0.429202</td>\n",
-       "      <td>-0.033757</td>\n",
-       "      <td>2.091711</td>\n",
-       "      <td>-0.065716</td>\n",
-       "      <td>-0.140001</td>\n",
-       "      <td>-0.045029</td>\n",
-       "      <td>-0.422779</td>\n",
-       "      <td>-0.535674</td>\n",
-       "      <td>-0.155637</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.035668</td>\n",
-       "      <td>-0.113177</td>\n",
-       "      <td>-1.905825</td>\n",
-       "      <td>-0.234035</td>\n",
-       "      <td>-0.168534</td>\n",
-       "      <td>-0.746006</td>\n",
-       "      <td>-1.576690</td>\n",
-       "      <td>-1.142160</td>\n",
-       "      <td>-1.431245</td>\n",
-       "      <td>0.816530</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7906</th>\n",
-       "      <td>-0.244785</td>\n",
-       "      <td>-0.429202</td>\n",
-       "      <td>-0.033757</td>\n",
-       "      <td>-0.478078</td>\n",
-       "      <td>-0.065716</td>\n",
-       "      <td>-0.140001</td>\n",
-       "      <td>-0.045029</td>\n",
-       "      <td>-0.422779</td>\n",
-       "      <td>-0.535674</td>\n",
-       "      <td>-0.155637</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.035668</td>\n",
-       "      <td>-0.113177</td>\n",
-       "      <td>-0.312471</td>\n",
-       "      <td>-0.234035</td>\n",
-       "      <td>-0.168534</td>\n",
-       "      <td>-0.746006</td>\n",
-       "      <td>-1.148009</td>\n",
-       "      <td>-1.142160</td>\n",
-       "      <td>-0.140882</td>\n",
-       "      <td>0.816530</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7907 rows × 29 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            0         1         2         3         4         5         6   \\\n",
-       "0    -0.244785 -0.429202 -0.033757 -0.478078 -0.065716 -0.140001 -0.045029   \n",
-       "1    -0.244785 -0.429202 -0.033757 -0.478078 -0.065716 -0.140001 -0.045029   \n",
-       "2    -0.244785 -0.429202 -0.033757 -0.478078 -0.065716 -0.140001 -0.045029   \n",
-       "3    -0.244785 -0.429202 -0.033757  2.091711 -0.065716 -0.140001 -0.045029   \n",
-       "4    -0.244785 -0.429202 -0.033757 -0.478078 -0.065716 -0.140001 -0.045029   \n",
-       "...        ...       ...       ...       ...       ...       ...       ...   \n",
-       "7902 -0.244785  2.329905 -0.033757 -0.478078 -0.065716 -0.140001 -0.045029   \n",
-       "7903 -0.244785 -0.429202 -0.033757  2.091711 -0.065716 -0.140001 -0.045029   \n",
-       "7904 -0.244785 -0.429202 -0.033757 -0.478078 -0.065716 -0.140001 -0.045029   \n",
-       "7905 -0.244785 -0.429202 -0.033757  2.091711 -0.065716 -0.140001 -0.045029   \n",
-       "7906 -0.244785 -0.429202 -0.033757 -0.478078 -0.065716 -0.140001 -0.045029   \n",
-       "\n",
-       "            7         8         9   ...        19        20        21  \\\n",
-       "0    -0.422779  1.866807 -0.155637  ... -0.965560 -0.113177 -0.312471   \n",
-       "1    -0.422779 -0.535674 -0.155637  ... -0.965560 -0.113177 -0.312471   \n",
-       "2    -0.422779 -0.535674 -0.155637  ...  1.035668 -0.113177 -1.905825   \n",
-       "3    -0.422779 -0.535674 -0.155637  ... -0.965560 -0.113177  1.144431   \n",
-       "4    -0.422779 -0.535674 -0.155637  ... -0.965560 -0.113177  1.549940   \n",
-       "...        ...       ...       ...  ...       ...       ...       ...   \n",
-       "7902 -0.422779 -0.535674 -0.155637  ... -0.965560 -0.113177 -0.312471   \n",
-       "7903 -0.422779 -0.535674 -0.155637  ...  1.035668 -0.113177 -1.905825   \n",
-       "7904 -0.422779  1.866807 -0.155637  ...  1.035668 -0.113177 -0.312471   \n",
-       "7905 -0.422779 -0.535674 -0.155637  ...  1.035668 -0.113177 -1.905825   \n",
-       "7906 -0.422779 -0.535674 -0.155637  ...  1.035668 -0.113177 -0.312471   \n",
-       "\n",
-       "            22        23        24        25        26        27        28  \n",
-       "0    -0.234035 -0.168534 -0.746006 -0.327171  1.192321  0.854267 -1.511910  \n",
-       "1    -0.234035 -0.168534 -0.746006 -0.421933 -1.142160 -0.140882  0.816530  \n",
-       "2    -0.234035 -0.168534 -0.746006 -1.576690 -1.142160 -0.744220  0.816530  \n",
-       "3    -0.234035  1.380132  1.140292  1.658588  0.561407 -0.140882  0.226027  \n",
-       "4    -0.234035  2.477641  1.567642  0.680942 -0.717355  0.472353  0.798592  \n",
-       "...        ...       ...       ...       ...       ...       ...       ...  \n",
-       "7902  1.588374 -0.168534 -0.746006  0.680942 -1.142160  0.177379  0.816530  \n",
-       "7903 -0.234035 -0.168534 -0.746006 -1.782733 -1.142160 -1.431245  0.816530  \n",
-       "7904 -0.234035 -0.168534 -0.746006 -0.805927 -1.142160  0.292171  0.816530  \n",
-       "7905 -0.234035 -0.168534 -0.746006 -1.576690 -1.142160 -1.431245  0.816530  \n",
-       "7906 -0.234035 -0.168534 -0.746006 -1.148009 -1.142160 -0.140882  0.816530  \n",
-       "\n",
-       "[7907 rows x 29 columns]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusted R2: 0.8996318395328171 \n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "X_train"
+    "# Calculating adjusted R^2\n",
+    "n = X_train.shape[0]  # Number of observations in the training set\n",
+    "p = X_train.shape[1]  # Number of features used for training\n",
+    "adjusted_r2 = 1 - (1 - r2) * (n - 1) / (n - p - 1)\n",
+    "print(f'Adjusted R2: {adjusted_r2} \\n')"
    ]
   },
   {
@@ -4060,7 +3720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "678c328b",
+   "id": "b934cbe1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4068,7 +3728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41bfe3ff",
+   "id": "a8e3835a",
    "metadata": {},
    "outputs": [],
    "source": []
